--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'javax.mail', name: 'mail', version: '1.4'
     compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+
 }
