--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Oct 31 21:23:32 MSK 2018
+#Tue Oct 22 19:55:16 MSK 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-rc-2-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-rc-2-bin.zip
+zipStoreBase=GRADLE_USER_HOME
